airflow/logs/dag_id=simple_dag/run_id=scheduled__2022-07-19T213500+0000/task_id=create_pg_table/attempt=1.log
[2022-07-19 21:36:01,915] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:35:00+00:00 [queued]>
[2022-07-19 21:36:01,936] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:35:00+00:00 [queued]>
[2022-07-19 21:36:01,937] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-07-19 21:36:01,938] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-07-19 21:36:01,939] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-07-19 21:36:01,977] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_pg_table> on 2022-07-19 21:35:00+00:00
[2022-07-19 21:36:01,986] {standard_task_runner.py:52} INFO - Started process 14623 to run task
[2022-07-19 21:36:01,993] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'simple_dag', 'create_pg_table', 'scheduled__2022-07-19T21:35:00+00:00', '--job-id', '898', '--raw', '--subdir', 'DAGS_FOLDER/first_dag.py', '--cfg-path', '/tmp/tmp5h93l5rz', '--error-file', '/tmp/tmp9jdlr0da']
[2022-07-19 21:36:01,995] {standard_task_runner.py:80} INFO - Job 898: Subtask create_pg_table
[2022-07-19 21:36:02,141] {task_command.py:370} INFO - Running <TaskInstance: simple_dag.create_pg_table scheduled__2022-07-19T21:35:00+00:00 [running]> on host bc1c26dbd036
[2022-07-19 21:36:02,348] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=simple_dag
AIRFLOW_CTX_TASK_ID=create_pg_table
AIRFLOW_CTX_EXECUTION_DATE=2022-07-19T21:35:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2022-07-19T21:35:00+00:00
[2022-07-19 21:36:02,379] {base.py:68} INFO - Using connection ID 'postgres_localhost' for task execution.
[2022-07-19 21:36:02,428] {dbapi.py:213} INFO - Running statement: 
            create table if not exists traffic_flow (
                track_id; type; traveled_d; avg_speed; lat; lon; speed; lon_acc; lat_acc; time,
                primary key (track_id)
            )
        , parameters: None
[2022-07-19 21:36:02,442] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 3:                 track_id; type; traveled_d; avg_speed; lat; ...
                                ^

[2022-07-19 21:36:02,481] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=simple_dag, task_id=create_pg_table, execution_date=20220719T213500, start_date=20220719T213601, end_date=20220719T213602
[2022-07-19 21:36:02,597] {standard_task_runner.py:97} ERROR - Failed to execute job 898 for task create_pg_table (syntax error at or near ";"
LINE 3:                 track_id; type; traveled_d; avg_speed; lat; ...
                                ^
; 14623)
[2022-07-19 21:36:02,662] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-19 21:36:02,934] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
